--- a/css/selectors/style.css
+++ b/css/selectors/style.css
@@ -79,5 +79,16 @@ section{
 
 h2, h3, p {
     margin-bottom: 10px; 
-    color: darkred;
+    /* color: darkred; */
+}
+
+
+/* Descendant Selector - ( ancestor descendant ) */
+
+
+.extraSection div{
+    border: 1px solid black;
+    padding: 5px;
+    background-color: lightgray;
+    color: chocolate;
 }
